# -autotools-learn

1/: Makefile  Makefile.in  config.status  configure  configure.ac  helloworld  helloworld.c
1/.deps/: helloworld.Po
1/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
2/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan  str
2/.deps/: str-str.Po
2/autom4te.cache/: output.0  requests  traces.0  traces.1
2/include/: str.h
2/src/: str.c
3/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan  get.c  get.h  hello  main.c  sum.c  sum.h  val.c
3/.deps/: get.Po  main.Po  sum.Po  val.Po
3/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
4/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure.scan  main.c
4/autom4te.cache/: output.0  requests  traces.0  traces.1
4/include/: get.h  sum.h
4/src/: Makefile  Makefile.am  Makefile.in  get.c  sum.c  val.c
5/: config.h  config.h.in  config.status  configure  configure.ac  configure.scan  integers.c  integers.re
5/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
